Get Order methods
Method gets the select order with full details and associated products
