# backend-api/controllers/OrdersController.js
@@ -1,8 +1,8 @@
+const { Model } = require('sequelize');
 const {db} = require('../db');
 const Utilities = require('./Utilities');
 const UUID = require('uuidv7');
-const { Model } = require('sequelize');
-const Order = require('../models/Order');
+const Product = db.products
 
 exports.create =
 async (req, res) => {
@@ -37,12 +37,26 @@ async (req, res) => {
     .status(200)
     .send(AllOrders.map(({OrderID, Status}) => {return{OrderID, Status}})); 
 }
-// exports.getById =
-// async (req, res) => {
-//     if (
-//         !req.Body.OrderID
-//     ){
-//         return res.status(400).send({error: 'Missing OrderId.'});
-//     }
 
-// }
+exports.getById =
+async (req, res) => {
+    const order = await getOrder(req, res);
+
+    if (!order) {return res.status(404).send({error: 'Order not found'});}
+    
+    return res.status(200).send(order);
+}
+
+const getOrder =
+async (req, res) => {    
+    const id = req.params.OrderID;
+    const order = await db.orders.findByPk(id, {
+        include: [{model: Product}]
+    });
+
+    if(!order) {
+        res.status(404).send({error: `Order with ID ${id} not found.`});
+        return null;
+    }
+    return order;
+}
